--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "gpx-parse": "^0.10.4",
     "gpxparser": "^3.0.8",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   }
 }
