--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/polyline": "^1.1.1",
     "aws-sdk": "^2.1333.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -19,10 +20,13 @@
     "fs": "^0.0.1-security",
     "gpx-parse": "^0.10.4",
     "gpxparser": "^3.0.8",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "polyline": "^0.2.0",
+    "polyline-encoded": "^0.0.9",
     "uuid": "^9.0.0"
   }
 }
