--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "polyline": "^0.2.0",
     "polyline-encoded": "^0.0.9",
+    "sax": "^1.2.4",
     "uuid": "^9.0.0"
   }
 }
